[package]
name = "pol"
version = "0.4.0"
edition = "2024"
authors = ["Tiago Guimarães <tilacog@gmail.com>"]
description = "An interactive Reverse Polish Notation (RPN) calculator"
license = "GPL-3.0"
repository = "https://github.com/tilacog/pol"

[dependencies]
clap = { version = "4", features = ["derive"] }
home = "0.5.12"
rustyline = "17.0.2"
